Created full outline of dashboard. The next step is to use node js server to pull data to display and replace the placeholders.

--- a/client-app/src/Styles/main.css
+++ b/client-app/src/Styles/main.css
@@ -6,7 +6,6 @@
   color-scheme: light dark;
   color: rgba(255, 255, 255, 0.87);
   background-color: #242424;
-
   font-synthesis: none;
   text-rendering: optimizeLegibility;
   -webkit-font-smoothing: antialiased;
@@ -15,9 +14,8 @@
 
 
 body {
-  margin: 0;
+  /* Margin helps make sure no unnecessary scrolling*/
+  margin:auto;
   display: flex;
-  /* place-items: center;  This line moves all content to the center of the page*/
-  min-width: 320px;
-  min-height: 100vh;
+  
 }
